<resources>
    <string name="app_name" translatable="false">Run For Fun</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <!-- Campos -->
    <string name="nombre">Nombre</string>
    <string name="calorias">Calorias en total</string>
    <string name="caloriasDia">Calorias hoy</string>
    <string name="pasos">Pasos dados en total</string>
    <string name="pasosDia">Pasos dados hoy</string>
    <string name="solicitudesEnviadas">Solicitudes enviadas</string>
    <string name="solicitudesrecibidas">Solicitudes recibidas</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="buttonEditar">Editar</string>
    <string name="altura">Altura (en cm)</string>
    <string name="peso">Peso (en kg)</string>
    <string name="distanciaDia">Distancia recorrida hoy</string>
    <string name="distancia">Distancia en total recorrida</string>
    <string name="paginaWeb">Pagina Web</string>
    <string name="amigosActividad">Esta es la actividad de tus amigos</string>
    <string name="velocidad">Velocidad: </string>
    <string name="aniadirAmigo">Añadir amigo</string>
    <string name="rutaMapa">Ver mi ruta en el mapa</string>
    <string name="bienvenidaChat">Te damos la bienvenida a este chat</string>
    <string name="enviar">Enviar</string>
    <string name="textoChat">Escribe aqui</string>
    <string name="escanear">Escanear</string>
    <!-- Errores -->
    <string name="errorNombre">"No es un nombre valido"</string>
    <string name="errorAltura">"No es una altura valida"</string>
    <string name="errorPeso">"No es un peso valido"</string>
    <string name="errorPeticionExistente">Ya has enviado una solicitud a este usuario</string>
    <string name="errorAmigoExistente">Ya tienes de amigo a este usuario</string>
    <string name="errorNoTienesAmigos">Aun no tienes amigos, agrega uno ya !!!</string>
    <string name="errorSiempreTuAmigo">Señor, yo simpre seré tu amigo..... pero ahora enserio, no puedes agregarte de amigo >:|</string>
    <string name="title_activity_maps">Mapa</string>


</resources>
